🔧 Setup Preact with Adonis

--- a/resources/views/home/index.edge
+++ b/resources/views/home/index.edge
@@ -7,6 +7,8 @@
     <h1 class="text-3xl font-bold">
       Manage your tasks, focus on what is important
     </h1>
+
+    <custom-select></custom-select>
   </section>
 
 
