--- a/resources/views/home/index.edge
+++ b/resources/views/home/index.edge
@@ -8,6 +8,14 @@
       Manage your tasks, focus on what is important
     </h1>
 
+    <h2 class="text-2xl font-bold">Tasks</h2>
+    <ul>
+      @each(task in tasks)
+        <li> {{ task }} </li>
+      @end
+    </ul>
+
+
     <custom-select></custom-select>
   </section>
 
