--- a/resources/views/home/index.edge
+++ b/resources/views/home/index.edge
@@ -10,11 +10,14 @@
 
     <h2 class="text-2xl font-bold">Tasks</h2>
     {{inspect(tasks)}}
+    {{inspect(await cache.get('tasks'))}}
 
 
     @!button({
       text: 'Login',
     })
+
+    {{ new Date() }}
 
 
     <custom-select></custom-select>
