--- a/resources/views/home/index.edge
+++ b/resources/views/home/index.edge
@@ -3,10 +3,22 @@
 
 @section('main')
 
-<section>
+<section class="p-10 flex flex-col gap-4">
     <h1 class="text-3xl font-bold">
       Manage your tasks, focus on what is important
     </h1>
+
+    <h2 class="text-2xl font-bold">Tasks</h2>
+    {{inspect(tasks)}}
+    {{inspect(await cache.get('tasks'))}}
+
+
+    @!button({
+      text: 'Login',
+    })
+
+    {{ new Date() }}
+
 
     <custom-select></custom-select>
   </section>
