🚧 Email + password auth finished

--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -3,10 +3,51 @@
 
 @section('main')
 
-<section>
-    <h1 class="text-3xl font-bold">
-      Login
-    </h1>
+<section class="flex flex-col p-4 gap-2">
+  <h1 class="text-3xl font-bold">
+    Login
+  </h1>
+
+
+
+  @if(flashMessages.get('auth.error')?.startsWith('E_UNAUTHORIZED_ACCESS'))
+
+  <div class="border-2 border-red-500 bg-red-100 text-red-500 px-2 py-3" role="alert" aria-live="assertive">
+    Login to have access to this resource
+  </div>
+
+  @elseif(flashMessages.get('auth.error'))
+
+  <div class="border-2 border-red-500 bg-red-100 text-red-500 px-2 py-3" role="alert" aria-live="assertive">
+    Invalid credentials
+  </div>
+
+  @endif
+
+  <form method="POST" class="flex flex-col gap-4">
+    {{ csrfField() }}
+
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" class="border-2 border-black px-3 py-2"
+      value="{{ flashMessages.get('email') ?? '' }}" placeholder="ex: email@domain.com" />
+    <span class="text-red-500">{{ flashMessages.get('errors.email') ?? '' }}</span>
+
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password" class="border-2 border-black px-3 py-2"
+      placeholder="a secure password" />
+    <span class="text-red-500">{{ flashMessages.get('errors.password') ?? '' }}</span>
+
+    <div class="flex gap-2 items-center">
+      <input type="checkbox" id="rememberMe" name="rememberMe" {{ flashMessages.get('rememberMe') ? 'checked' : '' }} />
+      <label for="rememberMe">Remember me</label>
+    </div>
+    <span class="text-red-500">{{ flashMessages.get('errors.rememberMe') ?? '' }}</span>
+
+    @component('components/button', { type: 'submit' })
+    Login with email
+    @end
+  </form>
 </section>
+
 
 @endsection
