--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -3,38 +3,81 @@
 
 @section('main')
 
-<section class="flex flex-col p-4 gap-2">
-  <h1 class="text-3xl font-bold">
+<section class="flex flex-col p-4 gap-4">
+  <h1 class="text-4xl font-extrabold">
     Register
   </h1>
 
+  <h2 class="text-gray-600">Before we start, please create an account</h2>
+
   <form method="POST" class="flex flex-col gap-4">
     {{ csrfField() }}
-    <label for="firstName">Your first name</label>
-    <input type="text" name="firstName" id="firstName" class="border-2 border-black px-3 py-2" placeholder="ex: Alex"
-      value="{{ flashMessages.get('firstName') ?? '' }}" />
-    <span class="text-red-500">{{ flashMessages.get('errors.firstName', '') }}</span>
+
+    @component('components/input', {
+    label: 'Your first name',
+    name: 'firstName',
+    placeholder: 'Alex',
+    error: flashMessages.get('errors.firstName', ''),
+    value: flashMessages.get('firstName', ''),
+    required: true
+    })
+    @slot('icon')
+    @!component('components/icons/user', {class: 'h-4 w-4'})
+    @end
+    @end
 
 
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email" class="border-2 border-black px-3 py-2"
-      value="{{ flashMessages.get('email') ?? '' }}" placeholder="ex: email@domain.com" />
-    <span class="text-red-500">{{ flashMessages.get('errors.email', '') }}</span>
+    @component('components/input', {
+    type: 'email',
+    label: 'Email',
+    name: 'email',
+    placeholder: 'ex: email@domain.com',
+    error: flashMessages.get('errors.email', ''),
+    value: flashMessages.get('email', ''),
+    required: true
+    })
+    @slot('icon')
+    @!component('components/icons/email', {class: 'h-4 w-4'})
+    @end
+    @end
 
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" class="border-2 border-black px-3 py-2"
-      placeholder="a secure password" />
-    <span class="text-red-500">{{ flashMessages.get('errors.password') ?? '' }}</span>
+    @component('components/input', {
+    type: 'password',
+    label: 'Password',
+    name: 'password',
+    placeholder: 'a secure password',
+    error: flashMessages.get('errors.password', ''),
+    required: true
+    })
+    @slot('icon')
+    <password-input-toggle class="inline-flex" field-id="password" hidden-text="Show password"
+      visible-text="Hide password">
+    </password-input-toggle>
+    @end
+    @end
 
-    <label for="password_confirmation">Confirm password</label>
-    <input type="password" name="password_confirmation" id="password_confirmation"
-      class="border-2 border-black px-3 py-2" placeholder="a secure password" />
-    <span class="text-red-500">{{ flashMessages.get('errors.password_confirmation') ?? '' }}</span>
+    @component('components/input', {
+    type: 'password',
+    label: 'Confirm password',
+    name: 'password_confirmation',
+    placeholder: 'a secure password',
+    error: flashMessages.get('errors.password_confirmation', ''),
+    required: true
+    })
+    @slot('icon')
+    <password-input-toggle class="inline-flex" field-id="password_confirmation" hidden-text="Show password"
+      visible-text="Hide password">
+    </password-input-toggle>
+    @end
+    @end
 
     @component('components/button', { type: 'submit' })
-    Register
+    Create account
     @end
   </form>
+
+  <p class="text-center">Already registered ? <a href="/auth/login" class="underline font-bold">Login to your
+      account</a></p>
 </section>
 
 @endsection
