--- a/resources/views/layouts/default.edge
+++ b/resources/views/layouts/default.edge
@@ -9,12 +9,20 @@
   @entryPointScripts('app')
 </head>
 
-<body>
-  <header>
+<body class="bg-background">
+  <img src="https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg.jpg"
+    loading="lazy" sizes="100vw" alt="page backgroud"
+    srcset="https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg-p-500.jpg 500w, https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg-p-800.jpg 800w, https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg-p-1080.jpg 1080w, https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg-p-1600.jpg 1600w, https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg-p-2000.jpg 2000w, https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg-p-2600.jpg 2600w, https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg-p-3200.jpg 3200w, https://uploads-ssl.webflow.com/5dc1d89ee43b1a1a6645c737/64373975f67600ac6512f2d8_bruddle-header-bg.jpg 3280w"
+    class="absolute inset-0" height="">
+
+  <header class="relative z-10 h-20 p-4">
     <nav>
+      <a href="/" class="font-extrabold uppercase">
+        Todo-Ultra ⚡️
+      </a>
       @if(!auth.isLoggedIn)
-      <a href="/auth/login" class="underline text-indigo-700">Login</a>
-      <a href="/auth/register" class="underline text-indigo-700">Register</a>
+      {{-- <a href="/auth/login" class="underline text-indigo-700">Login</a>
+      <a href="/auth/register" class="underline text-indigo-700">Register</a> --}}
       @else
       <a href="/" class="underline text-indigo-700">Home</a>
       <form action="{{ route('auth.logout') }}?_method=DELETE" method="POST" class="inline">
@@ -27,7 +35,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="relative z-10">
     @!section('main')
   </main>
 
