--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -1,93 +1,90 @@
-@layout('layouts/default')
+@layout('layouts/auth')
 @set('title', 'Login')
 
-@section('main')
+@section('form')
+<h1 class="text-3xl font-bold">
+  Login
+</h1>
 
-<section class="flex flex-col p-4 gap-4">
-  <h1 class="text-3xl font-bold">
-    Login
-  </h1>
-
-  <h2 class="text-gray-600">Enter your account details</h2>
+<h2 class="text-gray-600">Enter your account details</h2>
 
 
-  @if(flashMessages.get('auth.error')?.startsWith('E_UNAUTHORIZED_ACCESS'))
+@if(flashMessages.get('auth.error')?.startsWith('E_UNAUTHORIZED_ACCESS'))
 
-  @component('components/alert')
-  Login to have access to this resource
+@component('components/alert')
+Login to have access to this resource
+@end
+
+@elseif(flashMessages.get('auth.error'))
+
+@component('components/alert')
+Invalid credentials
+@end
+
+@endif
+
+@if(flashMessages.get('github.auth.error'))
+@component('components/alert')
+{{flashMessages.get('github.auth.error')}}
+@end
+@endif
+
+<form method="POST" class="flex flex-col gap-4">
+  {{ csrfField() }}
+
+  @component('components/input', {
+  type: 'email',
+  label: 'Email',
+  name: 'email',
+  placeholder: 'ex: email@domain.com',
+  error: flashMessages.get('errors.email', ''),
+  value: flashMessages.get('email', ''),
+  required: true
+  })
+  @slot('icon')
+  @!component('components/icons/email', {class: 'h-4 w-4'})
+  @end
   @end
 
-  @elseif(flashMessages.get('auth.error'))
-
-  @component('components/alert')
-  Invalid credentials
+  @component('components/input', {
+  type: 'password',
+  label: 'Password',
+  name: 'password',
+  placeholder: 'a secure password',
+  error: flashMessages.get('errors.password', ''),
+  required: true
+  })
+  @slot('icon')
+  <password-input-toggle class="inline-flex" field-id="password" hidden-text="Show password"
+    visible-text="Hide password">
+  </password-input-toggle>
+  @end
   @end
 
-  @endif
+  @!component('components/checkbox', {
+  label: 'Remember me',
+  name: 'rememberMe',
+  checked: flashMessages.get('rememberMe'),
+  error: flashMessages.get('errors.password', ''),
+  })
 
-  @if(flashMessages.get('github.auth.error'))
-  @component('components/alert')
-  {{flashMessages.get('github.auth.error')}}
+  @component('components/button', { type: 'submit' })
+  Login with email
   @end
-  @endif
 
-  <form method="POST" class="flex flex-col gap-4">
-    {{ csrfField() }}
+  <div class="flex gap-2 items-center justify-center px-8">
+    <hr class="h-[2px] w-full bg-black" />
+    <span>Or</span>
+    <hr class="h-[2px] w-full bg-black" />
+  </div>
 
-    @component('components/input', {
-    type: 'email',
-    label: 'Email',
-    name: 'email',
-    placeholder: 'ex: email@domain.com',
-    error: flashMessages.get('errors.email', ''),
-    value: flashMessages.get('email', ''),
-    required: true
-    })
-    @slot('icon')
-    @!component('components/icons/email', {class: 'h-4 w-4'})
-    @end
-    @end
+  @component('components/linkbutton', { href: '/github/redirect', variant: 'dark', disableSpaNavigation: true })
+  Login with Github
+  @end
+</form>
 
-    @component('components/input', {
-    type: 'password',
-    label: 'Password',
-    name: 'password',
-    placeholder: 'a secure password',
-    error: flashMessages.get('errors.password', ''),
-    required: true
-    })
-    @slot('icon')
-    <password-input-toggle class="inline-flex" field-id="password" hidden-text="Show password"
-      visible-text="Hide password">
-    </password-input-toggle>
-    @end
-    @end
-
-    @!component('components/checkbox', {
-    label: 'Remember me',
-    name: 'rememberMe',
-    checked: flashMessages.get('rememberMe'),
-    error: flashMessages.get('errors.password', ''),
-    })
-
-    @component('components/button', { type: 'submit' })
-    Login with email
-    @end
-
-    <div class="flex gap-2 items-center justify-center px-8">
-      <hr class="h-[2px] w-full bg-black" />
-      <span>Or</span>
-      <hr class="h-[2px] w-full bg-black" />
-    </div>
-
-    @component('components/linkbutton', { href: '/github/redirect', variant: 'dark', disableSpaNavigation: true })
-    Login with Github
-    @end
-  </form>
-
-  <p class="text-center">You don't have an account ? <a href="/auth/register" class="underline font-bold">Create one</a>
-  </p>
-</section>
-
+<p class="text-center">You don't have an account ? <a href="/auth/register" class="underline font-bold">Create
+    one</a>
+</p>
 
 @endsection
