--- a/resources/views/layouts/default.edge
+++ b/resources/views/layouts/default.edge
@@ -35,7 +35,7 @@
     </nav>
   </header>
 
-  <main class="relative z-10">
+  <main class="relative z-10 mx-auto max-w-[1000px]">
     @!section('main')
   </main>
 
