--- a/resources/views/layouts/auth.edge
+++ b/resources/views/layouts/auth.edge
@@ -17,7 +17,7 @@
 
   <header class="relative z-10 h-20 p-4 md:p-8 lg:px-0 max-w-[1000px] mx-auto">
     <nav>
-      <a href="/" class="font-extrabold uppercase">
+      <a href="/" class="font-extrabold uppercase" up-follow="false">
         Todo-Ultra ⚡️
       </a>
     </nav>
