--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    font-family: 'Public Sans', sans-serif;
+  }
+}
