--- a/resources/views/components/linkbutton.edge
+++ b/resources/views/components/linkbutton.edge
@@ -1,5 +1,5 @@
 <a href="{{$props.href ?? ''}}" up-follow="{{ !$props.disableSpaNavigation }}"
-  class="{{clsx('font-semibold text-lg relative group focus-visible:outline-none text-center', $props.class)}}">
+  class="{{clsx('font-semibold text-lg relative group focus-visible:outline-none text-center inline-block', $props.class)}}">
   <span class="{{
     clsx(
       'relative border-[1.5px] rounded-sm border-black inline-block w-full',
