--- a/resources/views/components/alert.edge
+++ b/resources/views/components/alert.edge
@@ -1,4 +1,8 @@
-<div {{ $props.id ? `id=${$props.id}` : '' }} class="border-2 border-red-500 bg-red-100 text-red-500 px-2 py-3"
-  role="alert" aria-live="assertive">
+<div {{ $props.id ? `id=${$props.id}` : '' }} class="{{
+  clsx('border-2 px-2 py-3', {
+    'border-red-500 bg-red-100 text-red-500': ($props.type ?? 'error') === 'error',
+    'border-teal-700 bg-teal-50 text-teal-700': $props.type === 'success',
+  })
+}}" role="alert" aria-live="assertive">
   {{{ await $slots.main() }}}
 </div>
